# masato

./: .gitignore  README.md  _temp.sh  analysis.py  analysis_sintax.py  conda_requirements.txt  dm_test.ipynb  eda.ipynb  environment.yaml  environment.yml  get_abundance.py  get_tree.py  isolate_utils.py  plot.py  plot_dm.py  plot_tree.py  process_nbc_tax.py  process_rrndb.py  pyproject.toml  reorder.py  requirements.txt  standard_amplicon.sh  standard_amplicon_bulk_isolate.sh  standard_isolate.sh  trim.py  trim_maps_wgs.sh  usearch_workflow.py  utils.py  utils_blast.py
.github/: copilot-instructions.md
assign_taxonomy_with_blast/: genbank_nodes_and_names_to_taxonomy.py  taxonomy_assignment_blast.py
data/: barcodes_fwd.fasta
data/isolate/: barcode_layout.tsv  barcodes_rev.fasta  patterns.txt
data/nanopore/: custom.fasta
read_processer/: map_utils.py  recording.py
scripts/: demo.sh
src/easy_amplicon/: analysis_sintax.py  get_abundance.py  get_tree.py  isolate_utils.py  plot.py  plot_dm.py  plot_tree.py  run_rdp_classifier.py  trim.py  usearch_workflow.py  utils_blast.py
src/easy_amplicon/data/isolate/: barcodes_rev.fasta
src/easy_amplicon/data/maps_seq/: BC1.fasta
src/easy_amplicon/read_processer/: map_utils.py  recording.py
src/easy_amplicon/setup/: conda_install.py  download_rdp.py  download_test_data.py
src/masato/: __init__.py  analysis.py  cli.py  diversity.py  get_abundance.py  get_tree.py  io.py  isolate_utils.py  plot.py  plot_dm.py  plot_tree.py  process_nbc_tax.py  process_queue.py  process_rrndb.py  run_rdp_classifier.py  trim.py  usearch_workflow.py  utils.py  utils_blast.py
src/masato/data/: conda_requirements.txt
src/masato/data/isolate/: barcodes_fwd.fasta  barcodes_rev.fasta  patterns.txt
src/masato/data/maps_seq/: BC2.fasta  BC3.fasta
src/masato/data/rnatag_seq/: barcode.fasta  patterns.txt
src/masato/preprocess/: 16s.py  basic.py  camii_isolates.py  main.py  maps_seq.py  rnatag_seq.py
src/masato/read_processer/: recording.py
src/masato/setup/: conda_install.py  download_rdp.py  download_test_data.py  info.yaml
tests/: test_plot.py  test_plot_dm.py  test_rdp.py  test_tree.py  test_trim.py  test_usearch_workflow.py
